<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
    <item android:title="@string/my_profile">
        <menu>

            <item android:title="@string/my_home" />
            <item android:title="@string/my_bookings" />
            <item
                android:id="@+id/my_wishlist"
                android:title="@string/my_wishlish"/>

        </menu>
    </item>
    </group>
    <group>
    <item android:title="@string/help_support">
        <menu>
            <item android:title="@string/contact_us" />
            <item android:title="@string/terms_conditions" />
            <item android:title="@string/help_center" />
        </menu>
    </item>
    </group>

</menu>


<!--
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group >

        <item
            android:id="@+id/my_wishlist"
            android:icon="@drawable/ic_nav_wishlist"
            android:title="@string/my_wishlish" />

        <item
            android:id="@+id/my_orders"
            android:icon="@drawable/ic_nav_orders"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/my_cart"
            android:icon="@drawable/ic_nav_cart"
            android:title="@string/my_cart" />

        <item
            android:id="@+id/signout"
            android:icon="@drawable/out"
            android:title="@string/sign_out" />

    </group>



</menu>
-->
