<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorNew2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/sparklink"/>

    <TextView
        android:id="@+id/nav_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/sparklink_technologies"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_address" />
    <TextView
        android:id="@+id/nav_text_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_no" />

</LinearLayout>
