<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_height="match_parent">

    <!---        Name         -->
    <android.support.design.widget.TextInputLayout
        android:textColorHint="#000000"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <EditText
            android:typeface="monospace"
            android:textColorHint="#00ffe1"
            android:textColor="@color/colorBlack"

            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"/>

    </android.support.design.widget.TextInputLayout>

    <!---      Address          -->
    <android.support.design.widget.TextInputLayout
        android:textColorHint="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <EditText
            android:typeface="monospace"

            android:textColorHint="#00ffe1"
            android:textColor="@color/colorBlack"
            android:lines="2"
            android:maxLines="2"
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/address"/>

    </android.support.design.widget.TextInputLayout>


    <!---       Email - ID          -->
    <android.support.design.widget.TextInputLayout
        android:textColorHint="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <EditText
            android:typeface="monospace"

            android:textColorHint="#00ffe1"
            android:textColor="@color/colorBlack"

            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id"/>

    </android.support.design.widget.TextInputLayout>



    <!---       Gender         -->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:typeface="monospace"

            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/gender"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|start"
            android:textColor="#000000"/>

        <RadioGroup
            android:layout_marginLeft="40dp"
            android:weightSum="0"
            android:textColor="#000000"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg1"

            android:orientation="horizontal"
            android:textColorHint="#000000">
            <RadioButton
                android:typeface="monospace"

                android:textColor="#000000"

                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Male"
                android:id="@+id/rb_male"/>
            <RadioButton
                android:typeface="monospace"

                android:textColor="#000000"

                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Female"
                android:id="@+id/rb_female"/>
        </RadioGroup>

    </LinearLayout>



    <!---      Date of Birth         -->
    <android.support.design.widget.TextInputLayout
        android:textColorHint="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:onClick="dtp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">



        <Button

            android:typeface="monospace"

            android:background="#ffffff"
            android:textColorHint="#000000"
            android:textColor="@color/colorBlack"
            android:onClick="dtp"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:textStyle="normal"
            android:gravity="start"
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/date_of_birth"/>

    </android.support.design.widget.TextInputLayout>



    <!---     Contact No      -->
    <android.support.design.widget.TextInputLayout
        android:textColorHint="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <EditText
            android:typeface="monospace"

            android:textColorHint="#00ffe1"
            android:textColor="@color/colorBlack"

            android:id="@+id/contactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/contact_no"/>

    </android.support.design.widget.TextInputLayout>


    <!---        Sign Up         -->
    <Button
        android:typeface="monospace"

        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sigh_up"
        android:layout_marginLeft="20dp"
        android:onClick="signUp"
        android:textSize="20sp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_btn_gradient"/>

</LinearLayout>