<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="1dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:background="@color/colorMainLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


            <TextView
                android:textColor="@color/colorBlack"

                android:id="@+id/textViewSHOP_NAME_details_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SHOP NAME"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:lines="1"
                android:typeface="monospace"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />



            <!--<TextView
                android:id="@+id/textViewNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingBottom="@dimen/margin_4"
                android:paddingEnd="@dimen/margin_8"
                android:paddingStart="@dimen/margin_8"
                android:paddingTop="@dimen/margin_4"
                android:text="@string/new_product"
                android:textColor="@android:color/white" />-->




        <TextView
            android:id="@+id/textViewOWNERName_details_store"
            android:text="OWNER NAME"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:lines="1"
            android:textSize="12sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:text="@string/contact"
            android:id="@+id/textViewContact_details_store"

            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewAddress_details_store"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"

            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            />


            <TextView
                android:text="@string/email_id"
                android:id="@+id/textViewEmail_details_store"

                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

    </LinearLayout>

</android.support.v7.widget.CardView>