<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="1dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:background="@color/colorMainLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:background="@color/colorMainLayout"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_margin="10dp"
                android:id="@+id/imageViewProductThumb_details"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/h2"

                android:scaleType="centerInside" />

                <TextView
                    android:layout_marginTop="50dp"
                    android:id="@+id/tv_views"
                    android:text="200"
                    android:visibility="gone"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />

                <ImageButton
                    android:layout_margin="2dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/ib_wishlist"
                    android:scaleType="fitCenter"
                    android:background="@color/colorMainLayout"
                    android:src="@drawable/wishlist_black"

                    android:padding="5dp"
                    android:layout_gravity="end"/>

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="#d4d4d4"/>
            <TextView
                android:id="@+id/textViewProductName_details"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:textSize="15sp"

                android:textStyle="bold"
                android:textColor="#000000"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            <TextView
                android:id="@+id/textViewp_pid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="#000000"
                android:text="Pid"
                android:visibility="gone"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


            </LinearLayout>


        <TextView
            android:id="@+id/textViewDiscount_details"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:lines="3"
            android:maxLines="3"
            android:textSize="12sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/offer_price"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />
        <TextView
            android:text="@string/Rs"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/green_light" />
        <TextView
            android:id="@+id/textViewProductPrice_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/green_light"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/mrp"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />
            <TextView
                android:text="@string/Rs"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/green_light" />
            <TextView
                android:id="@+id/textViewProductMRP_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/green_light"
                android:textSize="13sp"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>