<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:background="@color/gen_white"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:background="@color/gen_white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <FrameLayout
                android:background="@color/gen_white"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_marginTop="50dp"
                    android:id="@+id/tv_views"
                    android:text="200"
                    android:visibility="gone"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />



            </FrameLayout>

            <TextView
                android:id="@+id/__Hotel_Name"
                android:text="The Ocean Park Resort ParkPk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="18dp"
                android:textSize="18sp"

                android:textStyle="bold"
                android:textColor="#000000"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:weightSum="0"
                android:background="@color/gen_white"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">





                <LinearLayout
                    android:layout_weight="7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/__Hotel_Addres"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:layout_marginRight="@dimen/margin_8"
                        android:layout_marginStart="@dimen/margin_8"
                        android:text="Calangute, Goa"
                        android:textSize="15sp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/__Hotel_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_4"

                        android:layout_marginBottom="@dimen/margin_4"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:layout_marginRight="@dimen/margin_8"
                        android:layout_marginStart="@dimen/margin_8"

                        android:textColor="#000000"
                        android:text="Contact"
                        android:textSize="13sp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
<LinearLayout
    android:layout_marginLeft="@dimen/margin_8"
    android:layout_marginStart="@dimen/margin_8"
    android:layout_marginTop="@dimen/margin_4"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/__Hotel_Ratings"
                        android:text="8.5"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:background="@color/green_light"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/gen_white" />
    <TextView
        android:background="@color/greenBack_light"
        android:layout_width="wrap_content"
        android:text="Very Good"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:textSize="10sp"
        android:gravity="center"
        android:textColor="@color/green_light"
        android:layout_height="match_parent" />
</LinearLayout>
                </LinearLayout>
                <ImageButton
                    android:layout_gravity="bottom"
                    android:layout_weight="2"
                    android:id="@+id/openmap"
                    android:background="@drawable/cardview_gradient_hotels"

                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:padding="4dp"

                    android:scaleType="fitXY"
                    android:src="@drawable/googlemap"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="#000000"
                android:text="Pid"
                android:visibility="gone"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/offer_price"
            android:textSize="13sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/__Hotel_Longi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:visibility="gone"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/__Hotel_Latti"
            android:text="@string/Rs"
            android:textSize="13sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/mrp"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:visibility="gone"
                android:id="@+id/__Hotel_wishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/green_light"
                android:textSize="13sp"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>